Fix contact background taken too much space.

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1030,31 +1030,20 @@ header {
     background: transparent;
   }
 
-  .background,
-  .contact-wrapper {
+  .background {
+    background: url('/images/hompage/contact/envelope.png') no-repeat center;
+    height: 100%;
+    width: 100%;
     position: absolute;
-    left: 50%;
-    margin-left: -317px;
+    margin: 0 auto;
   }
 
-  .background {
-    bottom: 0;
-
-    @media (max-width: 550px) {
-      width: 100%;
-    }
-  };
-
   .contact-wrapper {
-    width: 635px;
+    max-width: 580px;
     padding-left: 30px;
     padding-right: 30px;
-    top: 121px;
-
-    @media (max-width: 550px) {
-      width: 500px;
-      padding-left: 170px;
-    }
+    padding-top: 94px;
+    margin: 0 auto;
   }
 
   h2 {
